# Worms-Taller-1

./: .gitignore  CMakeLists.txt  LICENSE  New_Launchers.sh  README.md  buscar.sh  instalador.sh  install.sh  main
Camera/: camera.cpp
Client/assets/: textures.yaml
Client/libs/SDL2pp/: README.md
Client/resources/assets/: textures.yaml
Client/resources/sounds/: sounds.yaml
Client/src/: ClientProtocol.cpp  ClientProtocol.h  client_protocol.cpp  client_protocol.h  main.cpp
Client/src/Protocol/: ClientProtocol.cpp
Client/src/animation/: Animation.cpp  Animation.h  SeqAnimation.cpp  SeqAnimation.h  SpriteAnimation.cpp  SpriteAnimation.h
Client/src/buttonManager/: ButtonManager.cpp  ButtonManager.h  buttonManager.cpp  buttonManager.h
Client/src/camera/: Camera.cpp  Camera.h
Client/src/command/: AirAttackCmd.cpp  AirAttackCmd.h  ChargeCmd.cpp  ChargeCmd.h  CloseCmd.cpp  CloseCmd.h  Command.cpp  Command.h  CountdownCmd.cpp  CountdownCmd.h  DownCmd.cpp  DownCmd.h  FireCmd.cpp  FireCmd.h  JumpBackwardCmd.cpp  JumpBackwardCmd.h  JumpForwardCmd.cpp  JumpForwardCmd.h  LeftCmd.cpp  LeftCmd.h  MoveCamCmd.cpp  MoveCamCmd.h  MoveLeft.cpp  MoveLeft.h  MoveRight.cpp  MoveRight.h  RightCmd.cpp  RightCmd.h  SelectAirAttackCmd.cpp  SelectAirAttackCmd.h  SelectBananaCmd.cpp  SelectBananaCmd.h  SelectBatCmd.cpp  SelectBatCmd.h  SelectBazooka.cpp  SelectBazooka.h  SelectBazookaCmd.cpp  SelectBazookaCmd.h  SelectDynamiteCmd.cpp  SelectDynamiteCmd.h  (+18 more)
Client/src/core/: Engine.cpp  Engine.h
Client/src/exception/: ClosedServer.cpp  ClosedServer.h
Client/src/game/: Game.cpp  Game.h
Client/src/gameObject/: GameObject.cpp  GameObject.h  IObject.h
Client/src/graphics/: TextureManager.cpp  TextureManager.h
Client/src/inputs/: Input.cpp  Input.h
Client/src/loaderParams/: LoaderParams.cpp  LoaderParams.h
Client/src/protocol/: ClientProtocol.cpp  ClientProtocol.h
Client/src/rateController/: RateController.h
Client/src/soundManager/: SoundManager.cpp  SoundManager.h
Client/src/thread/: ReceiverThread.cpp  ReceiverThread.h  SenderThread.cpp  SenderThread.h
Client/src/timer/: Timer.cpp  Timer.h
Client/src/utils/: ColorDefinitions.cpp  ColorDefinitions.h  Constants.h
Client/ui/: CMakeLists.txt
Client/ui/include/: Queue.h  buscarpartida.h  crearpartida.h  creategame.h  liberror.h  lobby.h  login.h  mainmenu.h  resolver.h  resolvererror.h  searchgame.h  socket.h  thread.h  waiter.h
Client/ui/server-juguete/: liberror.cpp  mapas.txt  resolver.cpp  resolver.h  server.cpp  socket.cpp
Client/ui/src/: buscarpartida.cpp  crearpartida.cpp  creategame.cpp  lobby.cpp  login.cpp  main.cpp  mainmenu.cpp  resolvererror.cpp  searchgame.cpp  waiter.cpp
Client/ui/ui/: buscarpartida.ui  crearpartida.ui  creategame.ui  lobby.ui  login.ui  mainmenu.ui  searchgame.ui
Common/: LibError.cpp  ResolveError.cpp  Socket.cpp  common_liberror.cpp  common_liberror.h  common_resolver.cpp  common_resolver.h  common_resolvererror.cpp  common_resolvererror.h  common_socket.cpp
Common/DTO/: BeamDTO.cpp  BeamDTO.h  CommandDTO.cpp  CommandDTO.h  DTO.cpp  DTO.h  EndGameDTO.cpp  EndGameDTO.h  InitialStateDTO.cpp  InitialStateDTO.h  LobbyAnswerDTO.cpp  LobbyAnswerDTO.h  MapDTO.cpp  MapDTO.h  PlayerDTO.cpp  PlayerDTO.h  PlayersDTO.cpp  PlayersDTO.h  PlayersIniDTO.cpp  PlayersIniDTO.h  ProjectileDTO.cpp  ProjectileDTO.h  ProjectilesDTO.cpp  ProjectilesDTO.h  ProvisionDTO.cpp  ProvisionDTO.h  ResolverInitialDTO.cpp  ResolverInitialDTO.h  ResponseCreateGameDTO.cpp  ResponseCreateGameDTO.h  ResponseInitialStateDTO.cpp  ResponseInitialStateDTO.h  RoomDTO.cpp  RoomDTO.h  SnapShot.cpp  SnapShot.h  StageDTO.cpp  StageDTO.h  TurnDTO.cpp  TurnDTO.h  (+10 more)
Common/Protocol/: Protocol.cpp  Protocol.h
Common/Queue/: Queue.h
Common/Socket/: LibError.h  ResolveError.h  Resolver.cpp  Resolver.h  Socket.cpp  Socket.h  Super_Socket.h
Common/Thread/: Thread.cpp  Thread.h
Common/protocol/: BeamDTO.cpp  BeamDTO.h  DTO.h  MapDTO.cpp  MapDTO.h  Protocol.cpp  Protocol.h  WormDTO.cpp  WormDTO.h  common_DTO.h  common_beamDTO.cpp  common_beamDTO.h  common_mapDTO.cpp  common_mapDTO.h  common_protocol.cpp  common_protocol.h  common_wormDTO.cpp  common_wormDTO.h
Common/rateController/: RateController.cpp  RateController.h
Editor/: CMakeLists.txt
Editor/include/: chooseMapToEdit.h  editingWindow.h  editor.h  nameNewMap.h  zoom.h
Editor/src/: chooseMapToEdit.cpp  editingWindow.cpp  editor.cpp  main.cpp  nameNewMap.cpp  zoom.cpp
Editor/ui/: chooseMapToEdit.ui  editingWindow.ui  editor.ui  nameNewMap.ui
Modelo/: CMakeLists.txt  main.cpp
Modelo/src/Vista/Graphics/: TextManager.cpp  TextManager.h
Modelo/src/core/: Engine.cpp  Engine.h
Server/: box2DTutoGuia.cpp  comentarios.txt  main.cpp
Server/ConfigureParameters/: ConfigParameters.h
Server/GameParameters/: GameParameters.cpp  GameParameters.h  GameParameters.yaml
Server/box2d-main/: CMakeLists.txt  go.sh
Server/box2d-main/Stages/: JaulaMaldita.yaml  StageNames.yaml
Server/box2d-main/docs/: dynamics.md
Server/box2d-main/testbed/: CMakeLists.txt  otrosTestAgregarEnCmakeList.txt
Server/box2d-main/testbed/tests/: body_types.cpp  prueba1.cpp  prueba2.cpp  prueba3.cpp  prueba4.cpp  prueba5.cpp  prueba6.cpp  prueba7.cpp
Server/src/Control/: AcceptorThread.cpp  AcceptorThread.h  ClientConnection.cpp  ClientConnection.h  ClientLogin.cpp  ClientLogin.h  ClientThread.cpp  ClientThread.h  Engine.cpp  Engine.h  EstablishedConnections.cpp  EstablishedConnections.h  GameRoom.cpp  GameRoom.h  GamesProtected.cpp  GamesProtected.h  ProtectedGameRooms.cpp  ProtectedGameRooms.h  ReceiverThread.cpp  ReceiverThread.h  SenderThread.cpp  SenderThread.h  (+7 more)
Stages/: 4gusanos.yaml  AngulosVarios.yaml  Boxes.yaml  CursedCage.yaml  FinalStage.yaml  JaulaMaldita.yaml  MapForTestWeapon.yaml  MapManyWorms.yaml  MapaDemo.yaml  MapaDemo2.yaml  MapaFor2Players.yaml  OneReallyLongBeam.yaml  StageNames.yaml  VigaMania.yaml  Vigas10.yaml  bordertest.yaml  explosions.yaml  mapasuperepicoxd.yaml  test2.yaml  ungusano.yaml
Tests/: CMakeLists.txt  Mock_Socket.h  Socket.h  run_tests.sh  tests.cpp
(+183 files in other folders)
